<resources>
    <string name="app_name">Book Store</string>
    <string name="save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="qunatity">Quantity</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="book_name">Book Name</string>
    <string name="e_g_25">e.g. 25</string>
    <string name="_2">2</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">supplier phone number</string>
    <string name="hello_world">Hello World</string>
    <string name="txt_price">Price:$</string>
    <string name="delete">Delete</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="negative_sign">-</string>
    <string name="positive_sign">+</string>
    <string name="call">Call</string>
    <string name="new_data">New Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog">Delete Book Details</string>
    <string name="currently_there_is_no_data_to_show">Currently There Is No Data To Show Click Add Button</string>
</resources>
