<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">


    <TextView
        android:id="@+id/text_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:text="@string/product_name"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/size_18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/price"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/size_18sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/qunatity"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/size_18sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_price" />

    <TextView
        android:id="@+id/text_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/supplier_details"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/size_18sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_quantity" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_21dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_188dp" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="@dimen/size_166dp"
        android:layout_height="@dimen/size_39dp"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:ems="10"
        android:hint="@string/book_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/size_20dp" />

    <EditText
        android:id="@+id/price"
        android:layout_width="@dimen/size_167dp"
        android:layout_height="@dimen/size_41dp"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:ems="10"
        android:hint="@string/e_g_25"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="@dimen/size_169dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:ems="10"
        android:hint="@string/_2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_price" />

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="@dimen/size_165dp"
        android:layout_height="@dimen/size_43dp"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:ems="10"
        android:hint="@string/supplier_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_quantity" />

    <EditText
        android:id="@+id/supplier_number"
        android:layout_width="@dimen/size_162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:ems="30"
        android:hint="@string/supplier_phone_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name" />
</android.support.constraint.ConstraintLayout>